@@ -15,9 +15,23 @@
  * OF THE POSSIBILITY OF SUCH DAMAGES. You should have received a copy of the GPL 3 license with *
  * this file. If not, visit http://www.gnu.de/documents/gpl-3.0.en.html
  */
-
 package de.ukbonn.mwtek.dashboardlogic.logic;
 
+import de.ukbonn.mwtek.dashboardlogic.enums.CoronaFixedValues;
+import de.ukbonn.mwtek.dashboardlogic.models.CoronaResults;
+import de.ukbonn.mwtek.dashboardlogic.models.CoronaTreatmentLevelExport;
+import de.ukbonn.mwtek.dashboardlogic.tools.LocationFilter;
+import de.ukbonn.mwtek.utilities.fhir.resources.UkbCondition;
+import de.ukbonn.mwtek.utilities.fhir.resources.UkbEncounter;
+import de.ukbonn.mwtek.utilities.fhir.resources.UkbLocation;
+import de.ukbonn.mwtek.utilities.fhir.resources.UkbObservation;
+import de.ukbonn.mwtek.utilities.fhir.resources.UkbPatient;
+import de.ukbonn.mwtek.utilities.fhir.resources.UkbProcedure;
+import de.ukbonn.mwtek.utilities.generic.time.DateTools;
+import de.ukbonn.mwtek.utilities.generic.time.TimerTools;
+import java.io.FileNotFoundException;
+import java.io.PrintWriter;
+import java.text.SimpleDateFormat;
 import java.time.Instant;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
@@ -25,6 +39,7 @@ import java.time.Period;
 import java.time.ZoneId;
 import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.Date;
 import java.util.HashMap;
@@ -35,27 +50,19 @@ import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.stream.Collectors;
-
+import lombok.extern.slf4j.Slf4j;
 import org.hl7.fhir.r4.model.CodeableConcept;
+import org.hl7.fhir.r4.model.Coding;
 import org.hl7.fhir.r4.model.Encounter;
 import org.hl7.fhir.r4.model.Encounter.EncounterLocationComponent;
+import org.hl7.fhir.r4.model.Extension;
 import org.hl7.fhir.r4.model.Procedure.ProcedureStatus;
-
-import de.ukbonn.mwtek.dashboardlogic.enums.CoronaFixedValues;
-import de.ukbonn.mwtek.utilities.fhir.resources.UkbEncounter;
-import de.ukbonn.mwtek.utilities.fhir.resources.UkbLocation;
-import de.ukbonn.mwtek.utilities.fhir.resources.UkbObservation;
-import de.ukbonn.mwtek.utilities.fhir.resources.UkbPatient;
-import de.ukbonn.mwtek.utilities.fhir.resources.UkbProcedure;
-import de.ukbonn.mwtek.utilities.generic.time.DateTools;
-import de.ukbonn.mwtek.utilities.generic.time.TimerTools;
-import lombok.extern.slf4j.Slf4j;
+import org.hl7.fhir.r4.model.Reference;
 
 /**
- * 
  * This class contains all the functions that could be important in several of the sub-logics
  * (current, cumulative and temporal)
- * 
+ *
  * @author <a href="mailto:david.meyers@ukbonn.de">David Meyers</a>
  * @author <a href="mailto:berke_enes.dincel@ukbonn.de">Berke Enes Dincel</a>
  */
@@ -65,12 +72,12 @@ public class CoronaResultFunctionality {
   /**
    * Create a map sorting the encounters according to their icu treatmentlevel, only for the current
    * logic
-   * 
-   * @param listEncounters A list with {@linkplain UkbEncounter} resources
-   * @param listLocations A list with {@linkplain UkbLocation} resources, to figure out which
-   *          location is an icu location
+   *
+   * @param listEncounters    A list with {@linkplain UkbEncounter} resources
+   * @param listLocations     A list with {@linkplain UkbLocation} resources, to figure out which
+   *                          location is an icu location
    * @param listIcuProcedures The {@link UkbProcedure} resources, which include information about
-   *          ECMO / artificial ventilation periods
+   *                          ECMO / artificial ventilation periods
    * @return Map Containing encounter which are currently in icu
    */
   public static Map<String, List<UkbEncounter>> createCurrentIcuMap(
@@ -79,83 +86,65 @@ public class CoronaResultFunctionality {
     log.debug("started createCurrentIcuMap");
     Instant startTimer = TimerTools.startTimer();
 
-    // just inpatient encounter needed to check (ambulant cases cant have icu data)
-    List<UkbEncounter> listEncounterInpatients = listEncounters.parallelStream()
-        .filter(x -> CoronaResultFunctionality.isCaseClassInpatient(x))
-        .collect(Collectors.toList());
+    // just inpatient encounter needed to check (ambulant cases can't have icu data)
+    List<UkbEncounter> listEncounterInpatients =
+        listEncounters.parallelStream().filter(CoronaResultFunctionality::isCaseClassInpatient)
+            .toList();
 
     // get All Icu Locations
-    List<UkbLocation> listIcuLocations = listLocations.stream()
-        .filter(x -> !x.getType()
-            .isEmpty())
-        .filter(x -> x.getType()
-            .get(0)
-            .getCoding()
-            .get(0)
-            .getCode()
-            .equals(CoronaFixedValues.ICU.getValue()))
+    List<UkbLocation> listIcuLocations = listLocations.stream().filter(x -> !x.getType().isEmpty())
+        .filter(LocationFilter::isLocationWard).filter(LocationFilter::isLocationIcu)
         .collect(Collectors.toList());
 
     Map<String, List<UkbEncounter>> resultMap = new ConcurrentHashMap<>();
-    resultMap.put(CoronaFixedValues.ICU.getValue(), new ArrayList<UkbEncounter>());
-    resultMap.put(CoronaFixedValues.ICU_VENTILATION.getValue(), new ArrayList<UkbEncounter>());
-    resultMap.put(CoronaFixedValues.ICU_ECMO.getValue(), new ArrayList<UkbEncounter>());
+    resultMap.put(CoronaFixedValues.ICU.getValue(), new ArrayList<>());
+    resultMap.put(CoronaFixedValues.ICU_VENTILATION.getValue(), new ArrayList<>());
+    resultMap.put(CoronaFixedValues.ICU_ECMO.getValue(), new ArrayList<>());
     List<UkbEncounter> listRemovedEncounter = new ArrayList<>();
 
     // sort encounter to map accordingly (icu, Icu_Vent, Icu_Ecmo)
     try {
-      listEncounterInpatients.parallelStream()
-          .forEach(encounter -> {
-            Boolean isPositive =
-                encounter.hasExtension(CoronaFixedValues.POSITIVE_RESULT.getValue());
-            if (isPositive) {
-              List<UkbProcedure> listIcuCurrentPatient = listIcuProcedures.stream()
-                  .filter(x -> x.getCaseId()
-                      .equals(encounter.getId()))
-                  .collect(Collectors.toList());
+      listEncounterInpatients.parallelStream().forEach(encounter -> {
+        boolean isPositive = encounter.hasExtension(CoronaFixedValues.POSITIVE_RESULT.getValue());
+        if (isPositive) {
+          List<UkbProcedure> listIcuCurrentPatient =
+              listIcuProcedures.stream().filter(x -> x.getCaseId().equals(encounter.getId()))
+                  .toList();
 
-              if (listIcuCurrentPatient.isEmpty()) {
-                checkCurrentLocationWithCaseLocation(encounter, listIcuLocations, resultMap);
-              } else {
-                listIcuCurrentPatient.forEach(icu -> {
-                  // if encounter is icu_vent or icu_Ecmo
-                  if (icu.getStatus()
-                      .equals(ProcedureStatus.INPROGRESS)) {
-                    String categoryCode = icu.getCategory()
-                        .getCoding()
-                        .get(0)
-                        .getCode();
-                    sortIcuToMap(categoryCode, resultMap, encounter);
-                  }
-                  // check if the current location of the encounter is icu
-                  else {
-                    checkCurrentLocationWithCaseLocation(encounter, listIcuLocations, resultMap);
-                  }
-                });
+          if (listIcuCurrentPatient.isEmpty()) {
+            checkCurrentLocationWithCaseLocation(encounter, listIcuLocations, resultMap);
+          } else {
+            listIcuCurrentPatient.forEach(icu -> {
+              // if encounter is icu_vent or icu_Ecmo
+              if (icu.getStatus().equals(ProcedureStatus.INPROGRESS)) {
+                String categoryCode = icu.getCategory().getCoding().get(0).getCode();
+                sortIcuToMap(categoryCode, resultMap, encounter);
               }
-            }
-          });
+              // check if the current location of the encounter is icu
+              else {
+                checkCurrentLocationWithCaseLocation(encounter, listIcuLocations, resultMap);
+              }
+            });
+          }
+        }
+      });
 
       // check whether or not one of the icu encounter still has
       // a on going ventilation or ecmo attached
       for (UkbEncounter encounter : resultMap.get(CoronaFixedValues.ICU.getValue())) {
         if (resultMap.get(CoronaFixedValues.ICU_VENTILATION.getValue())
-            .contains(encounter)
-            || resultMap.get(CoronaFixedValues.ICU_ECMO.getValue())
-                .contains(encounter)) {
+            .contains(encounter) || resultMap.get(CoronaFixedValues.ICU_ECMO.getValue())
+            .contains(encounter)) {
           for (UkbProcedure icu : listIcuProcedures) {
-            if (icu.getCaseId()
-                .equals(encounter.getId())) {
-              if (icu.getStatus()
-                  .equals(ProcedureStatus.INPROGRESS)) {
+            if (icu.getCaseId().equals(encounter.getId())) {
+              if (icu.getStatus().equals(ProcedureStatus.INPROGRESS)) {
                 listRemovedEncounter.add(encounter);
               }
             }
           }
         }
       }
-      resultMap.get(CoronaFixedValues.ICU.getValue())
-          .removeAll(listRemovedEncounter);
+      resultMap.get(CoronaFixedValues.ICU.getValue()).removeAll(listRemovedEncounter);
     } catch (Exception e) {
       e.printStackTrace();
     }
@@ -165,12 +154,12 @@ public class CoronaResultFunctionality {
 
   /**
    * same procedure as createCurrentIcuMap, just for everything besides the current logic
-   * 
-   * @param listEncounters A list with {@linkplain UkbEncounter} resources
-   * @param listLocations A list with {@linkplain UkbLocation} resources, to figure out which
-   *          location is an icu location
+   *
+   * @param listEncounters    A list with {@linkplain UkbEncounter} resources
+   * @param listLocations     A list with {@linkplain UkbLocation} resources, to figure out which
+   *                          location is an icu location
    * @param listIcuProcedures The {@link UkbProcedure} resources, which include information about
-   *          ECMO / artificial ventilation periods
+   *                          ECMO / artificial ventilation periods
    * @return Map on which ICU cases are separated according to ICU, ventilation and Ecmo
    */
   public static Map<String, List<UkbEncounter>> createIcuMap(List<UkbEncounter> listEncounters,
@@ -178,66 +167,53 @@ public class CoronaResultFunctionality {
     log.debug("started createIcuMap");
 
     // List of stationary Cases
-    List<UkbEncounter> listInpatientEncounter = listEncounters.parallelStream()
-        .filter(x -> CoronaResultFunctionality.isCaseClassInpatient(x))
-        .collect(Collectors.toList());
+    List<UkbEncounter> listInpatientEncounter =
+        listEncounters.parallelStream().filter(CoronaResultFunctionality::isCaseClassInpatient)
+            .toList();
 
     Instant start = TimerTools.startTimer();
     // get Icu Locations
-    List<UkbLocation> listIcuLocations = listLocations.stream()
-        .filter(x -> !x.getType()
-            .isEmpty())
-        .filter(x -> x.getType()
-            .get(0)
-            .getCoding()
-            .get(0)
-            .getCode()
-            .equals(CoronaFixedValues.ICU.getValue()))
+    List<UkbLocation> listIcuLocations = listLocations.stream().filter(x -> !x.getType().isEmpty())
+        .filter(LocationFilter::isLocationWard).filter(LocationFilter::isLocationIcu)
         .collect(Collectors.toList());
 
     Map<String, List<UkbEncounter>> resultMap = new ConcurrentHashMap<>();
     resultMap.put(CoronaFixedValues.ICU.getValue(),
-        Collections.synchronizedList(new ArrayList<UkbEncounter>()));
+        Collections.synchronizedList(new ArrayList<>()));
     resultMap.put(CoronaFixedValues.ICU_VENTILATION.getValue(),
-        Collections.synchronizedList(new ArrayList<UkbEncounter>()));
+        Collections.synchronizedList(new ArrayList<>()));
     resultMap.put(CoronaFixedValues.ICU_ECMO.getValue(),
-        Collections.synchronizedList(new ArrayList<UkbEncounter>()));
+        Collections.synchronizedList(new ArrayList<>()));
 
     Map<String, Object> lockMap = new ConcurrentHashMap<>();
 
-    listInpatientEncounter.parallelStream()
-        .forEach(encounter -> {
+    listInpatientEncounter.parallelStream().forEach(encounter -> {
 
-          lockMap.putIfAbsent(encounter.getPatientId(), new Object());
+      lockMap.putIfAbsent(encounter.getPatientId(), new Object());
 
-          // make sure that encounter of a patient are not handled simultaneously
-          synchronized (lockMap.get(encounter.getPatientId())) {
-            Boolean isPositive =
-                encounter.hasExtension(CoronaFixedValues.POSITIVE_RESULT.getValue());
-            String caseId = encounter.getId();
+      // make sure that encounter of a patient are not handled simultaneously
+      synchronized (lockMap.get(encounter.getPatientId())) {
+        boolean isPositive = encounter.hasExtension(CoronaFixedValues.POSITIVE_RESULT.getValue());
+        String caseId = encounter.getId();
 
-            if (isPositive) {
-              // check whether encounter has connection to ventilation or ecmo procedure
+        if (isPositive) {
+          // check whether encounter has connection to ventilation or ecmo procedure
 
-              // get all procedures of an encounter
-              List<UkbProcedure> listIcuByEncounter = listIcuProcedures.stream()
-                  .filter(x -> x.getCaseId()
-                      .equals(caseId))
-                  .collect(Collectors.toList());
+          // get all procedures of an encounter
+          List<UkbProcedure> listIcuByEncounter =
+              listIcuProcedures.stream().filter(x -> x.getCaseId().equals(caseId)).toList();
 
-              for (UkbProcedure icu : listIcuByEncounter) {
-                String categoryCode = icu.getCategory()
-                    .getCoding()
-                    .get(0)
-                    .getCode();
-                if (categoryCode != null)
-                  sortIcuToMap(categoryCode, resultMap, encounter);
-              }
-              // check if encounter is only lying in icu without any procedure
-              checkIfEncounterIsIcu(encounter, listIcuLocations, resultMap);
+          for (UkbProcedure icu : listIcuByEncounter) {
+            String categoryCode = icu.getCategory().getCoding().get(0).getCode();
+            if (categoryCode != null) {
+              sortIcuToMap(categoryCode, resultMap, encounter);
             }
           }
-        });
+          // check if encounter is only lying in icu without any procedure
+          checkIfEncounterIsIcu(encounter, listIcuLocations, resultMap);
+        }
+      }
+    });
 
     TimerTools.stopTimerAndLog(start, "finished createIcuMap");
     return resultMap;
@@ -246,45 +222,36 @@ public class CoronaResultFunctionality {
   /**
    * Adds the given case to a map as an ICU case if no higher treatment level is found for this
    * case.
-   * 
-   * @param encounter The encounter that is going to be checked
+   *
+   * @param encounter        The encounter that is going to be checked
    * @param listIcuLocations A list with the ICU {@linkplain UkbLocation} resources
-   * @param resultMap Map that links the maxtreatmentlevel with {@link UkbEncounter}
+   * @param resultMap        Map that links the maxtreatmentlevel with {@link UkbEncounter}
    */
   private static void checkIfEncounterIsIcu(UkbEncounter encounter,
       List<UkbLocation> listIcuLocations, Map<String, List<UkbEncounter>> resultMap) {
     // checking location = icu location via location id
-    List<String> listIcuLocationIds = listIcuLocations.stream()
-        .map(UkbLocation::getId)
-        .collect(Collectors.toList());
+    List<String> listIcuLocationIds = listIcuLocations.stream().map(UkbLocation::getId).toList();
 
     for (EncounterLocationComponent location : encounter.getLocation()) {
       // check if location id or reference should be used
-      if (!location.getLocation()
-          .hasReference()) {
+      if (!location.getLocation().hasReference()) {
         if (listIcuLocationIds.contains(location.getId())) {
           if (!resultMap.get(CoronaFixedValues.ICU_VENTILATION.getValue())
-              .contains(encounter)
-              && !resultMap.get(CoronaFixedValues.ICU_ECMO.getValue())
-                  .contains(encounter)) {
-            if (!resultMap.get(CoronaFixedValues.ICU.getValue())
-                .contains(encounter)) {
-              resultMap.get(CoronaFixedValues.ICU.getValue())
-                  .add(encounter);
+              .contains(encounter) && !resultMap.get(CoronaFixedValues.ICU_ECMO.getValue())
+              .contains(encounter)) {
+            if (!resultMap.get(CoronaFixedValues.ICU.getValue()).contains(encounter)) {
+              resultMap.get(CoronaFixedValues.ICU.getValue()).add(encounter);
             }
           }
         }
       } else {
-        if (listIcuLocationIds.contains(extractIdFromResourceReference(location.getLocation()
-            .getReference()))) {
+        if (listIcuLocationIds.contains(
+            extractIdFromResourceReference(location.getLocation().getReference()))) {
           if (!resultMap.get(CoronaFixedValues.ICU_VENTILATION.getValue())
-              .contains(encounter)
-              && !resultMap.get(CoronaFixedValues.ICU_ECMO.getValue())
-                  .contains(encounter)) {
-            if (!resultMap.get(CoronaFixedValues.ICU.getValue())
-                .contains(encounter)) {
-              resultMap.get(CoronaFixedValues.ICU.getValue())
-                  .add(encounter);
+              .contains(encounter) && !resultMap.get(CoronaFixedValues.ICU_ECMO.getValue())
+              .contains(encounter)) {
+            if (!resultMap.get(CoronaFixedValues.ICU.getValue()).contains(encounter)) {
+              resultMap.get(CoronaFixedValues.ICU.getValue()).add(encounter);
             }
           }
         }
@@ -294,7 +261,7 @@ public class CoronaResultFunctionality {
 
   /**
    * Extracts the ID from a resource reference (e.g.: {@literal "Patient/123" -> 123})
-   * 
+   *
    * @param resourceReference Resource reference (e.g. "Patient/123")
    * @return Id of the reference
    */
@@ -305,26 +272,21 @@ public class CoronaResultFunctionality {
 
   /**
    * Used to identify whether the encounter is located in icu (for currentlogic)
-   * 
-   * @param encounter The encounter that is going to be checked
+   *
+   * @param encounter        The encounter that is going to be checked
    * @param listIcuLocations A list with the ICU {@link UkbLocation} resources
-   * @param resultMap Map that links the maxtreatmentlevel with {@link UkbEncounter}
+   * @param resultMap        Map that links the maxtreatmentlevel with {@link UkbEncounter}
    */
   private static void checkCurrentLocationWithCaseLocation(UkbEncounter encounter,
       List<UkbLocation> listIcuLocations, Map<String, List<UkbEncounter>> resultMap) {
-    List<String> locationIds = listIcuLocations.stream()
-        .map(UkbLocation::getId)
-        .collect(Collectors.toList());
+    List<String> locationIds = listIcuLocations.stream().map(UkbLocation::getId).toList();
 
     for (EncounterLocationComponent caseLocation : encounter.getLocation()) {
-      if (locationIds.contains(extractIdFromResourceReference(caseLocation.getLocation()
-          .getReference()))) {
+      if (locationIds.contains(
+          extractIdFromResourceReference(caseLocation.getLocation().getReference()))) {
         if (!resultMap.get(CoronaFixedValues.ICU.getValue())
-            .contains(encounter)
-            && !caseLocation.getPeriod()
-                .hasEnd()) {
-          resultMap.get(CoronaFixedValues.ICU.getValue())
-              .add(encounter);
+            .contains(encounter) && !caseLocation.getPeriod().hasEnd()) {
+          resultMap.get(CoronaFixedValues.ICU.getValue()).add(encounter);
         }
       }
     }
@@ -332,27 +294,25 @@ public class CoronaResultFunctionality {
 
   /**
    * Sorting the icu cases whether they have an ecmo or a ventilation procedure
-   * 
-   * @param categoryCode The value of an ICU category code (see
-   *          {@link CoronaFixedValues#ECMO_CODE })
-   * @param resultMap Map that links the maxtreatmentlevel with {@link UkbEncounter}
-   * @param encounter The encounter that is going to be checked
+   *
+   * @param categoryCode The value of an ICU category code (see {@link CoronaFixedValues#ECMO_CODE
+   *                     })
+   * @param resultMap    Map that links the maxtreatmentlevel with {@link UkbEncounter}
+   * @param encounter    The encounter that is going to be checked
    */
   private static void sortIcuToMap(String categoryCode, Map<String, List<UkbEncounter>> resultMap,
       UkbEncounter encounter) {
     // check if it is an ecmo case
     if (categoryCode.equals(CoronaFixedValues.ECMO_CODE.getValue())) {
-      if (!resultMap.get(CoronaFixedValues.ICU_ECMO.getValue())
-          .contains(encounter)) {
+      if (!resultMap.get(CoronaFixedValues.ICU_ECMO.getValue()).contains(encounter)) {
         addIcuEncounter(resultMap, encounter, CoronaFixedValues.ICU_ECMO.getValue());
       }
     }
 
-    // check if it is an ventilation case
-    else if (categoryCode.equals(CoronaFixedValues.VENT_CODE.getValue())
-        || categoryCode.equals(CoronaFixedValues.VENT_CODE2.getValue())) {
-      if (!resultMap.get(CoronaFixedValues.ICU_VENTILATION.getValue())
-          .contains(encounter)) {
+    // check if it is a ventilation case
+    else if (categoryCode.equals(CoronaFixedValues.VENT_CODE.getValue()) || categoryCode.equals(
+        CoronaFixedValues.VENT_CODE2.getValue())) {
+      if (!resultMap.get(CoronaFixedValues.ICU_VENTILATION.getValue()).contains(encounter)) {
         addIcuEncounter(resultMap, encounter, CoronaFixedValues.ICU_VENTILATION.getValue());
       }
     }
@@ -361,17 +321,17 @@ public class CoronaResultFunctionality {
   /**
    * Adds Encounter to either the ECMO or Ventilation lists inside the map
    *
-   * @param resultMap containing the treatmentlevel and a list of encounter with that treatmentlevel
+   * @param resultMap containing the treatmentlevel and a list of encounter with that
+   *                  treatmentlevel
    * @param encounter Case Resource
-   * @param icuType Defines whether the encounter Resource is a ECMO or Ventilation Case
+   * @param icuType   Defines whether the encounter Resource is a ECMO or Ventilation Case
    */
   private static void addIcuEncounter(Map<String, List<UkbEncounter>> resultMap,
       UkbEncounter encounter, String icuType) {
     if (icuType.equals(CoronaFixedValues.ICU_ECMO.getValue())) {
-      resultMap.get(CoronaFixedValues.ICU_ECMO.getValue())
-          .add(encounter);
+      resultMap.get(CoronaFixedValues.ICU_ECMO.getValue()).add(encounter);
     } else {
-      resultMap.compute(CoronaFixedValues.ICU_VENTILATION.getValue(), (k, v) -> {
+      resultMap.computeIfPresent(CoronaFixedValues.ICU_VENTILATION.getValue(), (k, v) -> {
         v.add(encounter);
         return v;
       });
@@ -380,7 +340,7 @@ public class CoronaResultFunctionality {
 
   /**
    * Create a map sorting the encounter after whether they are inpatient or outpatient
-   * 
+   *
    * @param listEncounters A list with {@linkplain UkbEncounter} resources
    * @return map Where encounter are sorted after stationary and ambulant
    */
@@ -392,36 +352,23 @@ public class CoronaResultFunctionality {
 
     Instant startTimer = TimerTools.startTimer();
 
-    encounterMap.put(CoronaFixedValues.AMBULANT_ITEM.getValue(), new ArrayList<UkbEncounter>());
-    encounterMap.put(CoronaFixedValues.STATIONARY_ITEM.getValue(), new ArrayList<UkbEncounter>());
-    // iterate through each encounter,
+    encounterMap.put(CoronaFixedValues.OUTPATIENT_ITEM.getValue(), new ArrayList<>());
+    encounterMap.put(CoronaFixedValues.STATIONARY_ITEM.getValue(), new ArrayList<>());
+    // Iterate through each encounter,
     // check if they have positive flag
     // and if they are ambulant or stationary cases
     listEncounters.forEach(e -> {
-
       // retrieve the contact type (Encounter.type.kontaktart) which is needed to figure out if the
       // inpatient case is a prestationary or normalstationary one
-      StringBuilder encounterContactType = new StringBuilder("");
-      List<CodeableConcept> listCCEncounterTypes = e.getType();
-      listCCEncounterTypes.forEach(ccEncounterType -> {
-        ccEncounterType.getCoding()
-            .forEach(codingEncounterType -> {
-              if (codingEncounterType.getSystem()
-                  .equals(CoronaFixedValues.CASETYPE_KONTAKTART_SYSTEM.getValue()))
-                encounterContactType.append(codingEncounterType.primitiveValue());
-            });
-      });
 
       if (e.hasExtension(CoronaFixedValues.POSITIVE_RESULT.getValue())) {
         // check if encounter is stationary (without the prestationary ones!)
         if (CoronaResultFunctionality.isCaseClassInpatient(e)) {
-          encounterMap.get(CoronaFixedValues.STATIONARY_ITEM.getValue())
-              .add(e);
+          encounterMap.get(CoronaFixedValues.STATIONARY_ITEM.getValue()).add(e);
         }
         // check if encounter is ambulant
         else if (CoronaResultFunctionality.isCaseClassOutpatient(e)) {
-          encounterMap.get(CoronaFixedValues.AMBULANT_ITEM.getValue())
-              .add(e);
+          encounterMap.get(CoronaFixedValues.OUTPATIENT_ITEM.getValue()).add(e);
         }
       }
     });
@@ -431,23 +378,22 @@ public class CoronaResultFunctionality {
 
   /**
    * Difference between two days in hours
-   * 
+   *
    * @param start The start date
-   * @param end The end date
+   * @param end   The end date
    * @return Difference in hours
    */
   public static Long calculateDaysInBetweenInHours(LocalDateTime start, LocalDateTime end) {
-    Long hours = ChronoUnit.HOURS.between(start, end);
-    return hours;
+    return ChronoUnit.HOURS.between(start, end);
   }
 
   /**
    * Creation of a cross table listing the current patients at the UKB site according to current
    * level of care and place of residence in Bonn or outside Bonn.
-   * 
+   *
    * @param mapCumulativeMaxTreatments Map with the current inpatient c19 positive cases and their
-   *          maxtreatment level
-   * @param listPatient List with the patient data for the given encounter
+   *                                   maxtreatment level
+   * @param listPatient                List with the patient data for the given encounter
    * @return List with the crosstab states and their values
    */
   public static List<String[]> generateCrosstabList(
@@ -468,21 +414,16 @@ public class CoronaResultFunctionality {
     // go through each patient check if they are living in Bonn
     for (UkbPatient patient : listPatient) {
       try {
-        mapIsBonnPatient.put(patient.getId(), patient.getAddress()
-            .get(0)
-            .getCity() == null ? false
-                : patient.getAddress()
-                    .get(0)
-                    .getCity()
-                    .equals(CoronaFixedValues.CITY_BONN.getValue()));
+        mapIsBonnPatient.put(patient.getId(),
+            patient.getAddress().get(0).getCity() != null && patient.getAddress().get(0)
+                .getCity().equals(CoronaFixedValues.CITY_BONN.getValue()));
       } catch (Exception e) {
         log.debug("Patient: " + patient.getId() + " got no address/city");
         e.printStackTrace();
       }
     }
     // iterate through each encounter, and sort them to the right list
-    for (Map.Entry<CoronaFixedValues, List<UkbEncounter>> entry : mapCumulativeMaxTreatments
-        .entrySet()) {
+    for (Map.Entry<CoronaFixedValues, List<UkbEncounter>> entry : mapCumulativeMaxTreatments.entrySet()) {
       CoronaFixedValues key = entry.getKey();
       for (UkbEncounter encounter : entry.getValue()) {
         if (mapIsBonnPatient.containsKey(encounter.getPatientId())) {
@@ -520,14 +461,14 @@ public class CoronaResultFunctionality {
         }
       }
     }
-    resultList.add(listNoBonn.toArray(new String[listNoBonn.size()]));
-    resultList.add(listNoBonnAndIcu.toArray(new String[listNoBonnAndIcu.size()]));
-    resultList.add(listNoBonnAndVent.toArray(new String[listNoBonnAndVent.size()]));
-    resultList.add(listNoBonnAndEcmo.toArray(new String[listNoBonnAndEcmo.size()]));
-    resultList.add(listOnlyBonn.toArray(new String[listOnlyBonn.size()]));
-    resultList.add(listBonnAndIcu.toArray(new String[listBonnAndIcu.size()]));
-    resultList.add(listBonnAndVent.toArray(new String[listBonnAndVent.size()]));
-    resultList.add(listBonnAndEcmo.toArray(new String[listBonnAndEcmo.size()]));
+    resultList.add(listNoBonn.toArray(new String[0]));
+    resultList.add(listNoBonnAndIcu.toArray(new String[0]));
+    resultList.add(listNoBonnAndVent.toArray(new String[0]));
+    resultList.add(listNoBonnAndEcmo.toArray(new String[0]));
+    resultList.add(listOnlyBonn.toArray(new String[0]));
+    resultList.add(listBonnAndIcu.toArray(new String[0]));
+    resultList.add(listBonnAndVent.toArray(new String[0]));
+    resultList.add(listBonnAndEcmo.toArray(new String[0]));
     TimerTools.stopTimerAndLog(startTimer, "finished generateCrosstabList");
 
     return resultList;
@@ -535,65 +476,47 @@ public class CoronaResultFunctionality {
 
   /**
    * Determination of the laboratory tests of all patients for whom there is an outpatient,
-   * prehospital, posthospital, day-care or full inpatient case in connection with the test
+   * pre-stationary, post-stationary, day-care or full inpatient case in connection with the test
    * depending on the laboratory result.
-   * 
+   *
    * @param listLabObservations A list with c19 {@link UkbObservation} resources
-   * @param labResult The laboratory result to be filtered for (e.g.
-   *          {@link CoronaFixedValues#POSITIVE}
-   * @return Get tests of all patients for whom an outpatient, prehospital, posthospital, partial
-   *         hospitalisation or full hospitalisation case related to the test exists.
+   * @param labResult           The laboratory result to be filtered for (e.g. {@link
+   *                            CoronaFixedValues#POSITIVE} )
+   * @return Get tests of all patients for whom an outpatient, pre-stationary, post-stationary,
+   * partial hospitalisation or full hospitalisation case related to the test exists.
    */
   public static Set<UkbObservation> getObservationsByResult(
       List<UkbObservation> listLabObservations, CoronaFixedValues labResult) {
     Set<UkbObservation> listObs = new HashSet<>();
     switch (labResult) {
-      case POSITIVE: {
-        listObs = listLabObservations.stream()
-            .filter(x -> CoronaFixedValues.COVID_LOINC_CODES.contains(x.getCode()
-                .getCoding()
-                .get(0)
-                .getCode()) && ((CodeableConcept) x.getValue()).getCoding()
-                    .get(0)
-                    .getCode()
-                    .equals(CoronaFixedValues.POSITIVE_CODE.getValue()))
-            .collect(Collectors.toSet());
-        break;
-      } // case
-      case BORDERLINE: {
-        listObs = listLabObservations.stream()
-            .filter(x -> CoronaFixedValues.COVID_LOINC_CODES.contains(x.getCode()
-                .getCoding()
-                .get(0)
-                .getCode()) && ((CodeableConcept) x.getValue()).getCoding()
-                    .get(0)
-                    .getCode()
-                    .equals(CoronaFixedValues.BORDERLINE_CODE.getValue()))
-            .collect(Collectors.toSet());
-        break;
-      } // case
-      case NEGATIVE: {
-        listObs = listLabObservations.stream()
-            .filter(x -> CoronaFixedValues.COVID_LOINC_CODES.contains(x.getCode()
-                .getCoding()
-                .get(0)
-                .getCode()) && ((CodeableConcept) x.getValue()).getCoding()
-                    .get(0)
-                    .getCode()
-                    .equals(CoronaFixedValues.NEGATIVE_CODE.getValue()))
-            .collect(Collectors.toSet());
-        break;
-      } // case
-      default:
-        break;
+      case POSITIVE -> listObs = listLabObservations.stream()
+          .filter(x -> CoronaFixedValues.COVID_LOINC_CODES.contains(
+              x.getCode().getCoding().get(0)
+                  .getCode()) && ((CodeableConcept) x.getValue()).getCoding().get(0)
+              .getCode().equals(CoronaFixedValues.POSITIVE_CODE.getValue()))
+          .collect(Collectors.toSet()); // case
+      case BORDERLINE -> listObs = listLabObservations.stream()
+          .filter(x -> CoronaFixedValues.COVID_LOINC_CODES.contains(
+              x.getCode().getCoding().get(0)
+                  .getCode()) && ((CodeableConcept) x.getValue()).getCoding().get(0)
+              .getCode().equals(CoronaFixedValues.BORDERLINE_CODE.getValue()))
+          .collect(Collectors.toSet()); // case
+      case NEGATIVE -> listObs = listLabObservations.stream()
+          .filter(x -> CoronaFixedValues.COVID_LOINC_CODES.contains(
+              x.getCode().getCoding().get(0)
+                  .getCode()) && ((CodeableConcept) x.getValue()).getCoding().get(0)
+              .getCode().equals(CoronaFixedValues.NEGATIVE_CODE.getValue()))
+          .collect(Collectors.toSet()); // case
+      default -> {
+      }
     }
     return listObs;
   }
 
   /**
    * Calculates the age of the patient at the time of the admission date of a case
-   * 
-   * @param birthDate Birth date of the patient
+   *
+   * @param birthDate     The birthdate of the patient
    * @param admissionDate Date when the patient was hospitalised
    * @return Age at the time of the admission
    */
@@ -601,41 +524,36 @@ public class CoronaResultFunctionality {
     if (birthDate != null && admissionDate != null) {
       long birthDateInSec = DateTools.dateToUnixTime(birthDate);
       long caseDateInSec = DateTools.dateToUnixTime(admissionDate);
-      LocalDate birthDateLocal = Instant.ofEpochSecond(birthDateInSec)
-          .atZone(ZoneId.systemDefault())
-          .toLocalDate();
-      LocalDate casePeriodDateLocal = Instant.ofEpochSecond(caseDateInSec)
-          .atZone(ZoneId.systemDefault())
-          .toLocalDate();
-      return Period.between(birthDateLocal, casePeriodDateLocal)
-          .getYears();
+      LocalDate birthDateLocal =
+          Instant.ofEpochSecond(birthDateInSec).atZone(ZoneId.systemDefault()).toLocalDate();
+      LocalDate casePeriodDateLocal =
+          Instant.ofEpochSecond(caseDateInSec).atZone(ZoneId.systemDefault()).toLocalDate();
+      return Period.between(birthDateLocal, casePeriodDateLocal).getYears();
     } else {
       return null;
     }
   }
 
   /**
-   * Filling the given maxtreatment casenrs map for debug purposes
-   * 
-   * @param listCumulativeEncounter Sublist with encounters that have already been used in the
-   *          "cumulative.treatmentlevel" data item
-   * @param treatmentLevel TreatmentLevel (e.g. {@link CoronaFixedValues#AMBULANT_ITEM} )
+   * Filling the given maxtreatmentlevel casenrs map for debug purposes
+   *
+   * @param listCumulativeEncounter   Sublist with encounters that have already been used in the
+   *                                  "cumulative.treatmentlevel" data item
+   * @param treatmentLevel            TreatmentLevel (e.g. {@link CoronaFixedValues#OUTPATIENT_ITEM}
+   *                                  )
    * @param resultMaxTreatmentCaseNrs Map with the output
    */
   public static void createCumulativeMaxDebug(List<UkbEncounter> listCumulativeEncounter,
-      String treatmentLevel, HashMap<String, Map<String, List<String>>> resultMaxTreatmentCaseNrs) {
+      String treatmentLevel,
+      HashMap<String, Map<String, List<String>>> resultMaxTreatmentCaseNrs) {
     listCumulativeEncounter.forEach(e -> {
       String pid = e.getPatientId();
-      if (resultMaxTreatmentCaseNrs.get(treatmentLevel)
-          .containsKey(pid)) {
-        resultMaxTreatmentCaseNrs.get(treatmentLevel)
-            .get(pid)
-            .add(e.getId());
+      if (resultMaxTreatmentCaseNrs.get(treatmentLevel).containsKey(pid)) {
+        resultMaxTreatmentCaseNrs.get(treatmentLevel).get(pid).add(e.getId());
       } else {
         List<String> caseList = new ArrayList<>();
         caseList.add(e.getId());
-        resultMaxTreatmentCaseNrs.get(treatmentLevel)
-            .put(pid, caseList);
+        resultMaxTreatmentCaseNrs.get(treatmentLevel).put(pid, caseList);
       }
     });
   }
@@ -644,40 +562,38 @@ public class CoronaResultFunctionality {
    * Finds the first recorded encounter Resource the patient had, and saves it together with the
    * Patient Reousrce
    *
-   * @param encounter Case Resource
-   * @param pidAdmissionMap Map containing patient ids and the first encounter Resource attached to it
+   * @param encounter       Case Resource
+   * @param pidAdmissionMap Map containing patient ids and the first encounter Resource attached to
+   *                        it
    */
   public static void sortingFirstAdmissionDateToPid(UkbEncounter encounter,
       Map<String, UkbEncounter> pidAdmissionMap) {
     if (encounter.isPeriodStartExistent()) {
-      LocalDateTime encounterAdmission = encounter.getPeriod()
-          .getStart()
-          .toInstant()
-          .atZone(ZoneId.systemDefault())
-          .toLocalDateTime();
+      LocalDateTime encounterAdmission =
+          encounter.getPeriod().getStart().toInstant().atZone(ZoneId.systemDefault())
+              .toLocalDateTime();
       String pid = encounter.getPatientId();
       if (!pidAdmissionMap.containsKey(encounter.getPatientId())) {
         pidAdmissionMap.put(pid, encounter);
       } else {
         UkbEncounter prevEncounter = pidAdmissionMap.get(pid);
-        LocalDateTime prevAdmission = prevEncounter.getPeriod()
-            .getStart()
-            .toInstant()
-            .atZone(ZoneId.systemDefault())
-            .toLocalDateTime();
-        if (prevAdmission.isAfter(encounterAdmission))
+        LocalDateTime prevAdmission =
+            prevEncounter.getPeriod().getStart().toInstant().atZone(ZoneId.systemDefault())
+                .toLocalDateTime();
+        if (prevAdmission.isAfter(encounterAdmission)) {
           pidAdmissionMap.replace(pid, encounter);
+        }
       }
     }
   }
 
   /**
    * Sort age to the corresponding age group
-   * 
+   *
    * @param age - age for checking
    * @return lowest value of the age group
    */
-  public static long checkAgeGroup(int age) {
+  public static int checkAgeGroup(int age) {
     if (age <= 19) {
       return 0;
     } else if (age >= 90) {
@@ -689,15 +605,16 @@ public class CoronaResultFunctionality {
             return i;
           }
         }
-      } else {
-        if (age >= 50) {
-          for (int i = 50; i <= 90; i += 5) {
-            if (age >= i && age <= i + 4) {
-              return i;
-            }
+      }
+      // else: if age >= 50
+      else {
+        for (int i = 50; i <= 90; i += 5) {
+          if (age >= i && age <= i + 4) {
+            return i;
           }
         }
       }
+
     }
     // this return should not be possible to happen
     return 4000;
@@ -706,86 +623,243 @@ public class CoronaResultFunctionality {
 
   /**
    * Retrieval of the value that is part of a slice in {@link Encounter#getType() Encounter.type}
-   * 
+   *
    * @param listType List of {@link Encounter#getType() Encounter.types}
-   * @return The contact type of a german value set (e.g. "vorstationär")
+   * @return The contact-type of a german value set (e.g. "vorstationär")
    */
   private static String getContactType(List<CodeableConcept> listType) {
 
     StringBuilder contactType = new StringBuilder();
-    listType.forEach(ccType -> {
-      ccType.getCoding()
-          .forEach(codingType -> {
-            if (codingType.getSystem()
-                .equals(CoronaFixedValues.CASETYPE_KONTAKTART_SYSTEM.getValue()))
-              contactType.append(codingType.getCode());
-          });
-    });
+    listType.forEach(ccType -> ccType.getCoding().forEach(codingType -> {
+      if (codingType.getSystem().equals(CoronaFixedValues.CASETYPE_KONTAKTART_SYSTEM.getValue())) {
+        contactType.append(codingType.getCode());
+      }
+    }));
 
     return contactType.length() > 0 ? contactType.toString() : null;
   }
 
   /**
    * A simple check if the given contact type got the value "prestationary"
-   * 
+   *
    * @param listType A list of {@link Encounter#getType() Encounter.types}
-   * @return true if the casetype equals "prestationary"
+   * @return true if the case type equals "prestationary"
    */
   public static boolean isCaseTypePrestationary(List<CodeableConcept> listType) {
     String contactType = getContactType(listType);
-    return contactType != null
-        ? contactType.equals(CoronaFixedValues.CASETYPE_PRESTATIONARY.getValue())
-        : false;
+    return contactType != null && contactType.equals(
+        CoronaFixedValues.CASETYPE_PRESTATIONARY.getValue());
   }
 
   /**
    * is the case class counted as "inpatient" regarding the json data specification (without
-   * prestationy cases)
-   * 
+   * pre-stationary cases)
+   *
    * @param encounter An instance of an {@link UkbEncounter} object
    * @return True, if the case class of the encounter is "inpatient"
    */
   public static boolean isCaseClassInpatient(UkbEncounter encounter) {
-    if (encounter.getClass_()
-        .getCode() != null
-        && (CoronaFixedValues.CASECLASS_INPATIENT.getValue()
-            .equals(encounter.getClass_()
-                .getCode())
-            && !isCaseTypePrestationary(encounter.getType())))
-      return true;
-    else
-      return false;
+    return encounter.getClass_()
+        .getCode() != null && (CoronaFixedValues.CASECLASS_INPATIENT.getValue()
+        .equals(encounter.getClass_().getCode()) && !isCaseTypePrestationary(
+        encounter.getType()));
   }
 
   /**
    * is the case class counted as "outpatient" regarding the json data specification (plus
-   * prestationy cases that are counted as "outpatient" logicwise in the workflow aswell)
-   * 
+   * pre-stationary cases that are counted as "outpatient" logic-wise in the workflow aswell)
+   *
    * @param encounter An instance of an {@link UkbEncounter} object
    * @return True, if the case class of the encounter is "outpatient"
    */
   public static boolean isCaseClassOutpatient(UkbEncounter encounter) {
-    if (encounter.getClass_()
-        .getCode() != null
-        && (CoronaFixedValues.CASECLASS_OUTPATIENT.getValue()
-            .equals(encounter.getClass_()
-                .getCode())
-            || isCaseTypePrestationary(encounter.getType())))
-      return true;
-    else
-      return false;
+    return encounter.getClass_()
+        .getCode() != null && (CoronaFixedValues.CASECLASS_OUTPATIENT.getValue()
+        .equals(encounter.getClass_().getCode()) || isCaseTypePrestationary(
+        encounter.getType()));
   }
 
   /**
-   * Splits the resource part from the id in a fhir resource reference (e.g.
-   * {@literal Location/123 -> 123})
-   * 
+   * Splits the system and resource part from the id in a fhir resource reference (e.g. {@literal
+   * http://fhirserver.com/r4/Location/123 -> 123})
+   *
    * @param fhirResourceReference A fhir resource reference
    * @return the plain id of the resource
    */
-  public static String splitReference(String fhirResourceReference) {
-    String[] parts = fhirResourceReference.split("/");
-    return parts[parts.length - 1];
+  public static String extractIdFromReference(Reference fhirResourceReference) {
+    // Split reference into segments
+    String[] segments = fhirResourceReference.getReference().split("/");
+    // Grab the last segment
+    return segments[segments.length - 1];
+  }
+
+  /**
+   * Export of a csv file that displays a list of case/encounter numbers of active cases separated
+   * by treatment level when run through
+   *
+   * @param mapCurrentTreatmentlevelCasenrs {@link CoronaResults#getMapCurrentTreatmentlevelCasenrs()
+   *                                        Map} with the current case/encounter ids by treatment
+   *                                        level
+   * @param exportDirectory                 The directory to export to (e.g.: "C:\currentTreatmentlevelExport")
+   * @param fileBaseName                    The base file name of the generated file (e.g.:
+   *                                        "Caseids_inpatient_covid19_patients")
+   */
+  public static void generateCurrentTreatmentLevelList(
+      HashMap<String, List<String>> mapCurrentTreatmentlevelCasenrs, String exportDirectory,
+      String fileBaseName) {
+
+    CoronaTreatmentLevelExport treatmentLevelExport = new CoronaTreatmentLevelExport(
+        mapCurrentTreatmentlevelCasenrs.get(CoronaFixedValues.NORMAL_WARD.getValue()),
+        mapCurrentTreatmentlevelCasenrs.get(CoronaFixedValues.ICU.getValue()),
+        mapCurrentTreatmentlevelCasenrs.get(CoronaFixedValues.ICU_VENTILATION.getValue()),
+        mapCurrentTreatmentlevelCasenrs.get(CoronaFixedValues.ICU_ECMO.getValue()));
+
+    String currentDate = new SimpleDateFormat("yyyy-MM-dd-HHmm").format(new Date());
+    try (PrintWriter out = new PrintWriter(
+        exportDirectory + "\\" + fileBaseName + "_" + currentDate + ".csv")) {
+      out.println(treatmentLevelExport.toCsv());
+    } catch (FileNotFoundException fnf) {
+      log.error(
+          "Unable to export file with the current treatment levels, probably because the target directory cant be created: "
+              + fnf.getMessage());
+    }
+  }
+
+
+  /**
+   * Determination of all patient Ids that have at least one case with a positive SARS-CoV-2 PCR
+   * laboratory result and/or SARS-CoV-2 diagnosis (U07.1 and U07.2).
+   *
+   * @param listUkbObservations List with the {@link UkbObservation SARS-CoV-2 lab findings}
+   * @param listUkbConditions   List with the {@link UkbCondition SARS-CoV-2 conditions}
+   * @return {@link HashSet} with patient Ids that have at least one case with a positive SARS-CoV-2
+   * PCR laboratory result and/or SARS-CoV-2 diagnosis
+   */
+  public static Set<String> getPidsPosFinding(List<UkbObservation> listUkbObservations,
+      List<UkbCondition> listUkbConditions) {
+    Set<String> listPidsPosFinding = new HashSet<>();
+    // Get all patient ids where the patient got at least one positive SARS-CoV-2 lab finding
+    listPidsPosFinding.addAll(getPidsWithPosCovidLabResult(listUkbObservations));
+    // Get all patient ids where the patient got at least one SARS-CoV-2 related condition
+    listPidsPosFinding.addAll(getPidsWithCovidDiagnosis(listUkbConditions));
+
+    return listPidsPosFinding;
+  }
+
+  /**
+   * Identification of all patients who have at least one case with a positive SARS-CoV-2 pcr test.
+   *
+   * @param listUkbObservations List with the {@link UkbObservation SARS-CoV-2 lab findings}
+   * @return List with the patients ids of all patients who have at least one case with a positive
+   * SARS-CoV-2 pcr tests
+   */
+  public static Collection<String> getPidsWithPosCovidLabResult(
+      List<UkbObservation> listUkbObservations) {
+    return listUkbObservations.parallelStream()
+        .filter(x -> CoronaFixedValues.COVID_LOINC_CODES.contains(
+            x.getCode().getCoding().get(0).getCode()))
+        .filter(x -> x.getValueCodeableConcept().getCoding().get(0).getCode()
+            .equals(CoronaFixedValues.POSITIVE_CODE.getValue()))
+        .map(UkbObservation::getPatientId).collect(Collectors.toSet());
+  }
+
+  /**
+   * Identification of all patients who have at least one case with a U07.1 or U07.2 diagnosis.
+   *
+   * @param listUkbConditions List with the {@link UkbCondition SARS-CoV-2 icd conditions}
+   * @return List with the patients ids of all patients who have at least one case with a U07.1 or
+   * U07.2 diagnosis
+   */
+  public static Set<String> getPidsWithCovidDiagnosis(List<UkbCondition> listUkbConditions) {
+    Set<String> pidsWithCovidDiag = new HashSet<>();
+    listUkbConditions.forEach(condition -> {
+      if (condition.hasCode() && condition.getCode()
+          .hasCoding(CoronaFixedValues.ICD_SYSTEM.getValue(),
+              CoronaFixedValues.U071.getValue()) || condition.getCode()
+          .hasCoding(CoronaFixedValues.ICD_SYSTEM.getValue(),
+              CoronaFixedValues.U072.getValue())) {
+        pidsWithCovidDiag.add(condition.getPatientId());
+      }
+    });
+    return pidsWithCovidDiag;
+  }
+
+  /**
+   * Check whether the Coding has the needed
+   *
+   * @param codeableConcept The codings that need to be checked (e.g. {@link UkbObservation#getCode()}).
+   * @param system          The system that should be checked
+   * @param validCodes      The codes that should be checked
+   * @return True if the system and a valid code is part of the coding
+   */
+  public static boolean isCodingValid(CodeableConcept codeableConcept, String system,
+      List<String> validCodes) {
+    boolean isCodingValid = false;
+    for (String code : validCodes) {
+      if (codeableConcept.hasCoding(system, code)) {
+        isCodingValid = true;
+      }
+    }
+    return isCodingValid;
+  }
+
+  /**
+   * Determine via the discharge disposition which is part of {@link UkbEncounter#getHospitalization()}
+   * whether the patient is deceased within the scope of the case under review.
+   *
+   * @param enc An instance of an {@link UkbEncounter} object
+   * @return <code>false</code>, if no valid discharge disposition can be found in the {@link
+   * UkbEncounter#getHospitalization()} instance and <code>true</code> if the discharge code ("07")
+   * was found
+   */
+  public static boolean isPatientDeceased(UkbEncounter enc) {
+
+    Encounter.EncounterHospitalizationComponent hospComp = enc.getHospitalization();
+    // check if encounter resource got a discharge disposition with a certain extension url
+    if (hospComp != null && hospComp.hasDischargeDisposition() && hospComp.getDischargeDisposition()
+        .hasExtension(CoronaFixedValues.DISCHARGE_DISPOSITION_EXT_URL.getValue())) {
+      Extension extDischargeDisp = hospComp.getDischargeDisposition()
+          .getExtensionByUrl(CoronaFixedValues.DISCHARGE_DISPOSITION_EXT_URL.getValue());
+      Extension extPosFirstAndSec = extDischargeDisp.getExtensionByUrl(
+          CoronaFixedValues.DISCHARGE_DISPOSITION_FIRST_AND_SECOND_POS_EXT_URL.getValue());
+      if (extPosFirstAndSec != null) {
+        // the extension always contains a coding as value
+        try {
+          Coding coding = (Coding) extPosFirstAndSec.getValue();
+          // If system is valid check the code right after
+          if (coding.hasSystem() && coding.getSystem()
+              .equals(
+                  CoronaFixedValues.DISCHARGE_DISPOSITION_FIRST_AND_SECOND_POS_SYSTEM.getValue())) {
+            // the code must be "07" (Death)
+            if (coding.hasCode() && coding.getCode()
+                .equals(CoronaFixedValues.DEATH_CODE.getValue())) {
+              return true;
+            }
+          } else {
+            return false;
+          }
+        } catch (ClassCastException cce) {
+          log.error(
+              "Encounter.hospitalization.dischargeDisposition.EntlassungsgrundErsteUndZweiteStelle.value must be from type Coding but found: "
+                  + extPosFirstAndSec.getValue()
+                  .getClass());
+        }
+      }
+    }
+
+    return false;
+  }
+
+  /**
+   * Increase the passed covid variant frequency by one.
+   *
+   * @param variantMap  Map that assigns the variant names, their (current) frequency.
+   * @param variantName Name of the variant (As defined in the ValueSet of the corresponding Data
+   *                    item).
+   */
+  public static void incrementVariantCount(Map<String, Integer> variantMap, String variantName) {
+    // Merge has the advantage that the fields with the numbers in the map do not have to be initialized and the map is called only once.
+    variantMap.merge(variantName, 1, Integer::sum);
   }
 
 }
